--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Spin & Go</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Spin & Go</h1>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <div id="canvas-container">
+        <canvas id="gameCanvas" width="800" height="600"></canvas>
+        <canvas id="joystickCanvas" width="800" height="600"></canvas>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
