게임 시작 전 팝업 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <canvas id="gameCanvas" width="800" height="600"></canvas>
         <canvas id="joystickCanvas" width="800" height="600"></canvas>
     </div>
+
+    <div id="story-modal" class="modal-overlay">
+        <div class="modal-content">
+            <h2>A Story</h2>
+            <p id="story-text">Please write your story here...</p>
+            <button id="start-game-btn">Start Game</button>
+        </div>
+    </div>
+
     <script src="game.js"></script>
 </body>
 </html>
